# vglang

./: Cargo.toml  README.md  build.rs  examples.vg  min.vg
.github/workflows/: build.yaml
benches/: min.rs
spec/: mir.md
src/: arena.rs  enum.rs  error.rs  error_builder.rs  functions.rs  lib.rs  main.rs  object.rs  parser.rs  spanned.rs  type_check.rs  types.rs
src/common/: bin_op.rs  context.rs  display.rs  error.rs  error_builder.rs  find.rs  global_context.rs  mod.rs  spanned.rs  vec_type.rs
src/interpreter/: mod.rs  z3_converter.rs
src/ir/: expr.rs  mod.rs  patmat.rs  transform.rs  type_check.rs
src/ir/objects/: allobject.rs  common.rs  enum.rs  function.rs  mod.rs
src/ir/types/: concrete.rs  mod.rs  parse.rs  type.rs  type_kind.rs  type_operable.rs
src/ir/types/base_types/: function.rs  int.rs  mod.rs  type.rs  unknown.rs
src/lir/: interpreter.rs  mod.rs  op.rs
src/mir/: ctx.rs  interpreter.rs  mod.rs  op.rs
src/mir/analysis/: alloc.rs
src/syntax/: ast.rs  mod.rs  parser.rs
src/types/: common.rs  function.rs  int.rs  mod.rs  vec_type.rs
std/: main.vg
