[package]
name = "fsmcreator"
version = "0.1.0"
authors = ["p0lunin <dmytro.polunin@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
peg = "0.6.2"
clap = "2.33.0"
itertools = "0.9.0"
either = "1.5.3"
smallvec = "1.7.0"

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "min"
harness = false
